# alt-propulsion-flight-dynamics

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  physics_model_suggestion.md
.github/workflows/: ci.yml  release.yml  security-scan.yml
alt_propulsion/: __init__.py  config.py  main.py
alt_propulsion/core/: atmosphere.py  modes.py  physics.py  validation.py
alt_propulsion/models/: craft_config.py  enums.py  flight_analysis.py
alt_propulsion/output/: report.py  warnings.py
alt_propulsion/presets/: demo_presets.py
alt_propulsion/propulsion/: anti_gravity.py  base.py  ducted_fan.py  hovercraft.py  hybrid.py  ion_thruster.py  plasma.py  rocket.py  vtol.py
alt_propulsion/tests/: test_atmosphere.py  test_physics.py  test_propulsion.py  test_validation.py
alt_propulsion/ui/: cli.py  desktop.py  mobile.py
docs/: PHYSICS_MODEL.md  README.md
